--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,10 +28,9 @@
             android:gravity="center_horizontal">
 
             <ImageView
-                android:layout_width="64dp"
-                android:layout_height="64dp"
-                android:src="@android:drawable/ic_dialog_email"
-                android:tint="#4F8EF7"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/icon"
                 android:layout_gravity="center"
                 android:layout_marginBottom="12dp"/>
 
