--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="user_message_bg">#4F8EF7</color>
+    <color name="ai_message_bg">#E8E8E8</color>
+    <color name="selected_chat_room_bg">#E3F2FD</color>
+    <color name="default_chat_room_bg">#FFFFFF</color>
+    <color name="primary_color">#2196F3</color>
 </resources>
