--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,12 @@
         <item name="android:textColor">#333333</item>
         <item name="android:background">@android:color/transparent</item>
     </style>
+
+    <!-- Message Bubble Style -->
+    <style name="MessageBubble">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/dialog_background</item>
+        <item name="android:elevation">2dp</item>
+    </style>
 </resources>
